--- a/Velov10/Velov10.csproj
+++ b/Velov10/Velov10.csproj
@@ -93,15 +93,19 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="DataModel\LyonStations.json" />
-    <None Include="DataModel\SampleData.json" />
+    <Content Include="DataModel\LyonStations.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="DataModel\SampleData.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Assets\Helper.cs" />
+    <Compile Include="Common\Helper.cs" />
     <Compile Include="Common\DoWork.cs" />
     <Compile Include="Common\NavigationHelper.cs" />
     <Compile Include="Common\ObservableDictionary.cs" />
